# ansible-role-rpi-lcd

./: .ansible-lint  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml  tasks.py
.github/workflows/: codeql-analysis.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
defaults/: main.yml
files/boot/: config.txt
files/etc/: inittab
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: boot-config.yml  configure-boot.yml  configure-touch.yml  configure-x11.yml  main.yml  raspbian-facts.yml  required-vars.yml  touch-config.yml  ubuntu-facts.yml  x11-config.yml
templates/boot/: cmdline.txt
templates/etc/X11/xorg.conf.d/: 99-calibration.conf.j2
tests/: test.yml
vars/: Debian.yml  MPI3501.yml  Ubuntu.yml  main.yml  required.yml
