[tool.poetry]
name = "rpi-lcd"
version = "0.1.9"
description = "Ansible Role - Raspberry Pi LCD."
authors = ["Federico Jaureguialzo <fedejaure@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/fedejaure/ansible-role-rpi-lcd"
repository = "https://github.com/fedejaure/ansible-role-rpi-lcd"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fedejaure/ansible-role-rpi-lcd/issues"

[tool.poetry.dependencies]
python = "<3.12,>=3.11"
ansible = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
invoke = "^2.0.0"
bump2version = "^1.0.1"

[tool.poetry.group.test.dependencies]
molecule = {extras = ["docker"], version = "^4.0.4"}

[tool.poetry.group.linters.dependencies]
isort = "^5.12.0"
black = "^24.3"
safety = "^2.4.0b1"
mypy = "^1.2"
yamllint = "^1.30.0"
ansible-lint = {version = "^6.14.4", markers = "platform_system != 'Windows'"}

[tool.poetry.group.flakeheaven.dependencies]
flake8 = "^4.0.1"
flakeheaven = "^3.2.1"
flake8-builtins = "^2.1.0"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^0.9.0"
flake8-bugbear = "^23.3.12"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.7.0"
flake8-bandit = "^3.0.0"
darglint = "^1.8.1"
pylint = "^2.17.2"

[tool.flakeheaven]
format = "grouped"
max_line_length = 99
show_source = true
docstring-convention = "google"
extended_default_ignore = []

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
flake8-docstrings = ["+*", "-D212"]
"flake8-*" = ["+*"]
pylint = ["-C????", "-E????", "+F????", "+I????", "-R????", "-W????"]

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke", "nox"]

[tool.black]
line-length = 99
target-version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
