[tool.poetry]
name = "rpi-lcd"
version = "0.2.0"
description = "Ansible Role - Raspberry Pi LCD."
authors = ["Federico Jaureguialzo <fedejaure@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/fedejaure/ansible-role-rpi-lcd"
repository = "https://github.com/fedejaure/ansible-role-rpi-lcd"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fedejaure/ansible-role-rpi-lcd/issues"

[tool.poetry.dependencies]
python = "<3.12,>=3.11"
ansible = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
invoke = "^2.2.0"
bump2version = "^1.0.1"

[tool.poetry.group.test.dependencies]
molecule = "^24.6.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}

[tool.poetry.group.linters.dependencies]
isort = "^5.13.2"
black = "^24.4"
safety = "^3.2.3"
mypy = "^1.10"
yamllint = "^1.35.1"
ansible-lint = {version = "^24.6.0", markers = "platform_system != 'Windows'"}

[tool.poetry.group.flakeheaven.dependencies]
flake8 = "^4.0.1"
flakeheaven = "^3.3.0"
flake8-builtins = "^2.5.0"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^2024.24.12"
flake8-bugbear = "^23.3.12"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.7.0"
flake8-bandit = "^3.0.0"
darglint = "^1.8.1"
pylint = "^3.2.3"

[tool.flakeheaven]
format = "grouped"
max_line_length = 99
show_source = true
docstring-convention = "google"
extended_default_ignore = []

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
flake8-docstrings = ["+*", "-D212"]
"flake8-*" = ["+*"]
pylint = ["-C????", "-E????", "+F????", "+I????", "-R????", "-W????"]

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke", "nox"]

[tool.black]
line-length = 99
target-version = ["py37"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pytest.*", "invoke.*", "nox.*"]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
